<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_popular_place"
            android:title="Popular Place" />
        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/ic_nearest_place"
            android:title="Nearest Place" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_nav_map"
            android:title="@string/nav_map" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/nav_about" />
    </group>

    <group android:id="@+id/menu2">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_signout"
            android:title="@string/nav_logout" />
    </group>
</menu>