<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintCircleRadius="0dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_outer"
        android:layout_width="300dp"
        android:layout_height="212dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="#E9E5E5"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="12dp"
        app:cardCornerRadius="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="#424343"
                android:fontFamily="sans-serif"
                android:paddingStart="15dp"
                android:paddingTop="12dp"
                android:shadowColor="@android:color/transparent"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:layout_marginTop="13dp"
                android:layout_marginStart="45dp"

                />

            <EditText
                android:layout_width="210dp"
                android:layout_height="27dp"
                android:layout_marginStart="45dp"
                android:background="@android:color/white"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_serial"
                android:layout_marginTop="13dp"
                android:layout_marginStart="45dp"

                />
            <EditText
                android:layout_width="210dp"
                android:layout_height="27dp"
                android:layout_marginStart="45dp"
                android:background="@android:color/white"/>


        </LinearLayout>


    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate_card"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50sp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_bg_rounded_corners"
        android:padding="15sp"
        />

</LinearLayout>